Fix menu animation not working on mobile iOS (also Midori)

--- a/assets/themes/default/_header.scss
+++ b/assets/themes/default/_header.scss
@@ -220,7 +220,7 @@ body > header {
    	  .mobile-label {
    	    opacity: 1;
          transform: translate(-50%, 80%);
-         -webkit-transform: translate(-50%) 80%);
+         -webkit-transform: translate(-50%, 80%);
    		}
     }
  	}
